--- a/package.json
+++ b/package.json
@@ -9,16 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tabler/icons-react": "^2.17.0",
     "@types/node": "20.1.0",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
+    "classnames": "^2.3.2",
+    "cntl": "^1.0.0",
+    "contentlayer": "^0.3.2",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.1",
     "next": "13.4.1",
+    "next-contentlayer": "^0.3.2",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "tabler-icons-react": "^1.56.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
   }
