--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "rehype-highlight": "^6.0.0",
+    "remark-gfm": "^3.0.1",
     "tabler-icons-react": "^1.56.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
