--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "linux-guide",
   "version": "0.1.0",
   "private": true,
+  "license": "MIT",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -9,7 +10,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mapbox/rehype-prism": "^0.8.0",
     "@tabler/icons-react": "^2.21.0",
+    "@types/mapbox__rehype-prism": "^0.8.0",
     "@types/node": "20.2.5",
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.4",
@@ -24,7 +27,6 @@
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "rehype-highlight": "^6.0.0",
     "remark-gfm": "^3.0.1",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3",
